--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-# Python
-venv/
-__pycache__/
-*.pyc
-
-# Logs
-*.log
-
-# Environment
-.env
-
-# Node modules
+# Node modules (React frontend)
 frontend/node_modules/
 
 # Build output
 frontend/dist/
+uploads/
+__pycache__/
+*.pyc
 
-# VS Code & system files
+# Python virtual environment (if any)
+venv/
+env/
+*.env
+
+# OS or editor junk
 .DS_Store
+*.log
+
+# VS Code settings (optional)
 .vscode/
