--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==3.1.1
-flask-cors==6.0.1
-pymongo==4.13.2
-python-dotenv==1.1.1
-openai==1.93.3
-python-docx==1.2.0
-SpeechRecognition==3.14.3
-pydub==0.25.1
-werkzeug==3.1.3
-pandas==2.2.2
-numpy==1.26.4
+Flask
+flask-cors
+pymongo
+python-dotenv
+openai
+python-docx
+SpeechRecognition
+pydub
+werkzeug
+pandas
+numpy
