--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
-    name: your-service-name
-    env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main_flask.py"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.8
+    name: final-agent-ui
+    runtime: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main_flask.py
+    build:
+      pythonVersion: 3.10.13
