--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
